tests/ui/box_vec.stderr
error: you seem to be trying to use `Box<Vec<T>>`. Consider using just `Vec<T>`
  --> $DIR/box_vec.rs:17:18
   |
17 | pub fn test(foo: Box<Vec<bool>>) {
   |                  ^^^^^^^^^^^^^^
   |
   = note: #[deny(box_vec)] implied by #[deny(clippy)]
note: lint level defined here
  --> $DIR/box_vec.rs:4:9
   |
4  | #![deny(clippy)]
   |         ^^^^^^
   = help: `Vec<T>` is already on the heap, `Box<Vec<T>>` makes an extra allocation.

error: aborting due to previous error

